--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-facebook-login": "^4.1.0",
+    "react-google-login": "^3.2.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
