--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,21 @@
   "description": "Training Buddy server",
   "main": "app.js",
   "scripts": {
-    "start-dev": "nodemon app.js --exec babel-node --presets babel-preset-env"
+    "start:dev": "nodemon app.js --exec babel-node --presets babel-preset-env"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-promise-router": "^3.0.3",
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.1",
+    "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-facebook-token": "^3.3.0",
     "passport-google-plus-token": "^2.1.0",
